<package format="2">
  <name>usb_cam</name>
  <version>0.3.4</version>
  <description>A ROS Driver for V4L USB Cameras</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>ffmpeg</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>csjw_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>image_transport</build_export_depend> 
  <build_export_depend>roscpp</build_export_depend> 
  <build_export_depend>std_msgs</build_export_depend> 
  <build_export_depend>std_srvs</build_export_depend> 
  <build_export_depend>sensor_msgs</build_export_depend> 
  <build_export_depend>ffmpeg</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>csjw_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>image_transport</exec_depend> 
  <exec_depend>roscpp</exec_depend> 
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>std_srvs</exec_depend> 
  <exec_depend>sensor_msgs</exec_depend> 
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>csjw_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>v4l-utils</exec_depend>
</package>
